--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Change me with your name</title>
+        <title>Sophia Ling</title>
     </head>
     <body>
         Test
